--- a/databank/import_export/templates/import_export/display_table.html
+++ b/databank/import_export/templates/import_export/display_table.html
@@ -3,7 +3,52 @@
 {% block content %}
 
 <div class="mt-3 ">
-    <h1> Display Table
-    </h1>
+    <div class="display-6">Trade Data Table</div>
+    <hr>
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+        <thead >
+            <tr>
+                <th  scope="col">Trade_Type</th>
+                <th scope="col">Calender</th>
+                <th scope="col">Fiscal_Year</th>
+                <th scope="col">Duration</th>
+                <th scope="col">Country_Name</th>
+                <th scope="col">HS_Code</th>
+                <th scope="col">Unit</th>
+                <th scope="col">Quantity</th>
+                <th scope="col">Currency_Type</th>
+                <th scope="col">Amount</th>
+                <th scope="col">Tarrif</th>
+                <th scope="col">Origin_Destination</th>
+                <th scope="col">TradersName_ExporterImporter</th>
+                <th scope="col">Documents</th>
+                <th scope="col">Product_Information</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for record in data %}
+            <tr>
+                <td>{{ record.Trade_Type }}</td>
+                <td>{{ record.Calender }}</td>
+                <td>{{ record.Fiscal_Year }}</td>
+                <td>{{ record.Duration }}</td>
+                <td>{{ record.Country_Name }}</td>
+                <td>{{ record.HS_Code }}</td>
+                <td>{{ record.Unit }}</td>
+                <td>{{ record.Quantity }}</td>
+                <td>{{ record.Currency_Type }}</td>
+                <td>{{ record.Amount }}</td>
+                <td>{{ record.Tarrif }}</td>
+                <td>{{ record.Origin_Destination }}</td>
+                <td>{{ record.TradersName_ExporterImporter }}</td>
+                <td>{{ record.Documents }}</td>
+                <td>{{ record.Product_Information }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    </div>
+    
 </div>
 {% endblock  %}
