--- a/databank/templates/main.html
+++ b/databank/templates/main.html
@@ -7,16 +7,18 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/3af0a06874.js" crossorigin="anonymous"></script>
 
-    
-        
+
 </head>
 
 <body>
 
     {% include 'navbar.html' %}
 
-    <div class="container">
+    <div class="container ">
+
+
         {% block content %}
 
 
