--- a/databank/templates/main.html
+++ b/databank/templates/main.html
@@ -16,12 +16,8 @@
 
     {% include 'navbar.html' %}
 
-    <div class="container ">
-
-
+    <div class="container  pt-3  ">
         {% block content %}
-
-
         {% endblock  %}
     </div>
 
