--- a/databank/import_export/templates/import_export/display_table.html
+++ b/databank/import_export/templates/import_export/display_table.html
@@ -37,11 +37,11 @@
             <input type="date" class="form-control" id="publishDateMax" name="date_max">
         </div>
         <div class="form-group col-md-4">
-            <label for="category">Category</label>
-            <select id="category" class="form-control" name="category">
-                <option selected>Choose...</option>
-                {% for cat in categories %}
-                <option value="{{ cat }}">{{ cat }}</option>
+            <label for="country_category">Country</label>
+            <select id="country_category" class="form-control" name="country_category">
+                <option selected>--</option>
+                {% for category in categories %}
+                <option value="{{category.id }}">{{category}}</option>
                 {% endfor %}
             </select>
         </div>
