--- a/databank/import_export/templates/import_export/display_table.html
+++ b/databank/import_export/templates/import_export/display_table.html
@@ -29,12 +29,12 @@
             <input type="number" min=0 class="form-control" id="viewCountMax" placeholder="10000?" name="quantity_max">
         </div>
         <div class="form-group col-md-2 col-lg-2">
-            <label for="publishDateMin">Publish date minimum</label>
-            <input type="date" class="form-control" id="publishDateMin" name="date_min">
+            <label for="date_minimum">Publish date minimum</label>
+            <input type="date" class="form-control" id="date_minimum"  name="date_min">
         </div>
         <div class="form-group col-md-2 col-lg-2">
-            <label for="publishDateMax">Publish date maximum</label>
-            <input type="date" class="form-control" id="publishDateMax" name="date_max">
+            <label for="date_maximum">Publish date maximum</label>
+            <input type="date" class="form-control" id="date_maximum" name="date_max">
         </div>
         <div class="form-group col-md-4">
             <label for="country_category">Country</label>
