--- a/databank/import_export/templates/import_export/display_table.html
+++ b/databank/import_export/templates/import_export/display_table.html
@@ -15,7 +15,7 @@
 
   <div class="collapse" id="collapseFilter">
     <form class="row g-3" method="GET" action=".">
-        {% csrf_token %}
+       
     <div class="form-group col-12">
         <div class="input-group">
             <input class="form-control py-2 border-right-0 border" type="search"
@@ -97,7 +97,7 @@
     <table class="table  table-striped table-bordered ">
         <thead>
             <tr>
-                <th scope="col">Trade_Type</th>
+                <th scope="col">Trade_Types</th>
                 <th scope="col">Calender</th>
                 <th scope="col">Fiscal_Year</th>
                 <th scope="col">Duration</th>
@@ -139,7 +139,7 @@
     </table>
 </div>
 
-<div class="pagination  m-3 d-flex justify-content-center ">
+<!-- <div class="pagination  m-3 d-flex justify-content-center ">
     <span class="step-links bg-light  rounded-1 d-flex justify-content-center gap-3 p-3 ">
         {% if page.has_previous %}
         <a href="?page=1" >&laquo; First</a>
@@ -155,5 +155,33 @@
         <a  href="?page={{ page.paginator.num_pages }}">Last &raquo;</a>
         {% endif %}
     </span>
+</div> -->
+
+<div class="pagination m-3 d-flex justify-content-center">
+    <span class="step-links bg-light rounded-1 d-flex justify-content-center gap-3 p-3">
+        {% if page.has_previous %}
+        <a href="?page=1{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}">
+            &laquo; First
+        </a>
+        <a href="?page={{ page.previous_page_number }}{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}">
+            Previous
+        </a>
+        {% endif %}
+        
+        <span class="current-page">
+            Page {{ page.number }} of {{ page.paginator.num_pages }}.
+        </span>
+        
+        {% if page.has_next %}
+        <a href="?page={{ page.next_page_number }}{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}">
+            Next
+        </a>
+        <a href="?page={{ page.paginator.num_pages }}{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}">
+            Last &raquo;
+        </a>
+        {% endif %}
+    </span>
 </div>
+
+
 {% endblock  %}
