--- a/databank/import_export/templates/import_export/display_table.html
+++ b/databank/import_export/templates/import_export/display_table.html
@@ -10,6 +10,8 @@
         <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseUpload" aria-expanded="false" aria-controls="collapseUpload">
             Upload Excel
           </button>
+
+          <a  href="{% url 'upload_trade_record' %}"><div class="btn btn-outline-dark">Add Trade Data</div></a>
     </p>
 </div>
 
