--- a/databank/import_export/templates/import_export/display_table.html
+++ b/databank/import_export/templates/import_export/display_table.html
@@ -4,37 +4,41 @@
 
 <div class="more-info-btns">
     <p class="d-inline-flex gap-1">
-        <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFilter" aria-expanded="false" aria-controls="collapseFilter">
-          Show Filters
+        <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFilter"
+            aria-expanded="false" aria-controls="collapseFilter">
+            Show Filters
         </button>
-        <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseUpload" aria-expanded="false" aria-controls="collapseUpload">
+        <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseUpload"
+            aria-expanded="false" aria-controls="collapseUpload">
             Upload Excel
-          </button>
+        </button>
 
-          <a  href="{% url 'upload_trade_record' %}"><div class="btn btn-outline-dark">Add Trade Data</div></a>
+        <a class="styled-link" href="{% url 'upload_trade_record' %}">
+            <button class="btn btn-outline-dark">Add Trade Data</button>
+        </a>
     </p>
 </div>
 
-  <div class="collapse" id="collapseFilter">
+<div class="collapse" id="collapseFilter">
     <form class="row g-3" method="GET" action=".">
-       
-    <div class="form-group col-12">
-        <div class="input-group">
-            <input class="form-control py-2 border-right-0 border" type="search"
-                name="currency_product_originDestination"
-                placeholder="Search by Currency Type, Product Information or Origin/Destination" />
-           
-        </div>
-    </div>
 
-    <div class="col-md-3">
-        <label for="date_minimum">Publish date minimum</label>
-        <input type="date" class="form-control" id="date_minimum" name="date_min">
-    </div>
-    <div class="col-md-3">
-        <label for="date_maximum">Publish date maximum</label>
-        <input type="date" class="form-control" id="date_maximum" name="date_max">
-    </div>
+        <div class="form-group col-12">
+            <div class="input-group">
+                <input class="form-control py-2 border-right-0 border" type="search"
+                    name="currency_product_originDestination"
+                    placeholder="Search by Currency Type, Product Information or Origin/Destination" />
+
+            </div>
+        </div>
+
+        <div class="col-md-3">
+            <label for="date_minimum">Publish date minimum</label>
+            <input type="date" class="form-control" id="date_minimum" name="date_min">
+        </div>
+        <div class="col-md-3">
+            <label for="date_maximum">Publish date maximum</label>
+            <input type="date" class="form-control" id="date_maximum" name="date_max">
+        </div>
 
         <div class="col-md-3 ">
             <label for="viewCountMin">Minimum Quantity</label>
@@ -44,59 +48,60 @@
             <label for="viewCountMax">Maximum Quantity</label>
             <input type="number" min=0 class="form-control" id="viewCountMax" placeholder="10000?" name="quantity_max">
         </div>
-    
 
-    
 
-    <div class="form-group col-md-3">
-        <label for="trade_type">Trade Type</label>
-        <select id="trade_type" class="form-control" name="trade_type">
-            <option selected>--</option>
-            {% for trade_type in trade_type_categories %}
-            <option value="{{trade_type}}">{{trade_type}}</option>
-            {% endfor %}
-        </select>
-    </div>
 
-    <div class="form-group col-md-3">
-        <label for="country_category">Country</label>
-        <select id="country_category" class="form-control" name="country_category">
-            <option selected>--</option>
-            {% for country_category in country_categories %}
-            <option value="{{country_category.id }}">{{country_category}}</option>
-            {% endfor %}
-        </select>
-    </div>
 
-    <div class="form-group col-md-3">
-        <label for="unit_category">Unit</label>
-        <select id="unit_category" class="form-control" name="unit_category">
-            <option selected>--</option>
-            {% for unit_category in unit_categories %}
-            <option value="{{unit_category.id }}">{{unit_category}}</option>
-            {% endfor %}
-        </select>
-    </div>
+        <div class="form-group col-md-3">
+            <label for="trade_type">Trade Type</label>
+            <select id="trade_type" class="form-control" name="trade_type">
+                <option selected>--</option>
+                {% for trade_type in trade_type_categories %}
+                <option value="{{trade_type}}">{{trade_type}}</option>
+                {% endfor %}
+            </select>
+        </div>
 
-    <div class="form-group col-md-3">
-        <label for="hs_code">HS Code</label>
-        <select id="hs_code" class="form-control" name="hs_code">
-            <option selected>--</option>
-            {% for hs_code in hs_codes %}
-            <option value="{{hs_code.id }}">{{hs_code}}</option>
-            {% endfor %}
-        </select>
-    </div>
+        <div class="form-group col-md-3">
+            <label for="country_category">Country</label>
+            <select id="country_category" class="form-control" name="country_category">
+                <option selected>--</option>
+                {% for country_category in country_categories %}
+                <option value="{{country_category.id }}">{{country_category}}</option>
+                {% endfor %}
+            </select>
+        </div>
 
-    <button type="submit" class=" col-1 btn btn-primary">Search</button>
-</form>
-  </div>
-  
+        <div class="form-group col-md-3">
+            <label for="unit_category">Unit</label>
+            <select id="unit_category" class="form-control" name="unit_category">
+                <option selected>--</option>
+                {% for unit_category in unit_categories %}
+                <option value="{{unit_category.id }}">{{unit_category}}</option>
+                {% endfor %}
+            </select>
+        </div>
+
+        <div class="form-group col-md-3">
+            <label for="hs_code">HS Code</label>
+            <select id="hs_code" class="form-control" name="hs_code">
+                <option selected>--</option>
+                {% for hs_code in hs_codes %}
+                <option value="{{hs_code.id }}">{{hs_code}}</option>
+                {% endfor %}
+            </select>
+        </div>
+
+        <button type="submit" class=" col-1 btn btn-primary">Search</button>
+    </form>
+</div>
+
 
 
 <hr>
 <div class="table-responsive">
-    <table class="table  table-striped table-bordered ">
+    <table class="table table-striped table-bordered  table-hover">
+        <!--  -->
         <thead>
             <tr>
                 <th scope="col">Trade_Types</th>
@@ -117,68 +122,61 @@
             </tr>
         </thead>
         <tbody class="table-hover">
-            
-            {% for record in page %}
+            {% for record in page %}</a>
             <tr>
-                <td>{{ record.Trade_Type }}</td>
-                <td>{{ record.Calender }}</td>
-                <td>{{ record.Fiscal_Year }}</td>
-                <td>{{ record.Duration }}</td>
-                <td>{{ record.Country_Name }}</td>
-                <td>{{ record.HS_Code }}</td>
-                <td>{{ record.Unit }}</td>
-                <td>{{ record.Quantity }}</td>
-                <td>{{ record.Currency_Type }}</td>
-                <td>{{ record.Amount }}</td>
-                <td>{{ record.Tarrif }}</td>
-                <td>{{ record.Origin_Destination }}</td>
-                <td>{{ record.TradersName_ExporterImporter }}</td>
-                <td>{{ record.Documents }}</td>
-                <td>{{ record.Product_Information }}</td>
+               
+                <td> <a class="styled-link"  href="{% url 'update_trade_record' record.id%}">{{ record.Trade_Type }}</a></td>
+                <td> <a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Calender }}</a> </td>
+                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Fiscal_Year }}</a></td>
+                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Duration }}</a></td>
+                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Country_Name }}</a></td>
+                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.HS_Code }}</a></td>
+                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Unit }}</a></td>
+                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Quantity }}</a></td>
+                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Currency_Type }}</a></td>
+                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Amount }}</a></td>
+                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Tarrif }}</a></td>
+                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Origin_Destination }}</a></td>
+                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.TradersName_ExporterImporter }}</a></td>
+                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Documents }}</a></td>
+                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Product_Information }}</a></td>
             </tr>
+
             {% endfor %}
         </tbody>
     </table>
 </div>
 
-<!-- <div class="pagination  m-3 d-flex justify-content-center ">
-    <span class="step-links bg-light  rounded-1 d-flex justify-content-center gap-3 p-3 ">
-        {% if page.has_previous %}
-        <a href="?page=1" >&laquo; First</a>
-        <a  href="?page={{ page.previous_page_number }}">Previous</a>
-        {% endif %}
-        
-        <span class="current-page ">
-            Page {{ page.number }} of {{ page.paginator.num_pages }}.
-        </span>
-        
-        {% if page.has_next %}
-        <a  href="?page={{ page.next_page_number }}">Next</a>
-        <a  href="?page={{ page.paginator.num_pages }}">Last &raquo;</a>
-        {% endif %}
-    </span>
-</div> -->
+
+
+
+
+
 
 <div class="pagination m-3 d-flex justify-content-center">
     <span class="step-links bg-light rounded-1 d-flex justify-content-center gap-3 p-3">
         {% if page.has_previous %}
-        <a href="?page=1{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}">
+        <a
+            href="?page=1{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}">
             &laquo; First
         </a>
-        <a href="?page={{ page.previous_page_number }}{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}">
+        <a
+            href="?page={{ page.previous_page_number }}{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}">
             Previous
         </a>
         {% endif %}
-        
+
         <span class="current-page">
             Page {{ page.number }} of {{ page.paginator.num_pages }}.
         </span>
-        
+
         {% if page.has_next %}
-        <a href="?page={{ page.next_page_number }}{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}">
+        <a
+            href="?page={{ page.next_page_number }}{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}">
             Next
         </a>
-        <a href="?page={{ page.paginator.num_pages }}{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}">
+        <a
+            href="?page={{ page.paginator.num_pages }}{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}">
             Last &raquo;
         </a>
         {% endif %}
@@ -187,3 +185,6 @@
 
 
 {% endblock  %}
+
+
+
