--- a/databank/templates/main.html
+++ b/databank/templates/main.html
@@ -9,6 +9,12 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/3af0a06874.js" crossorigin="anonymous"></script>
 
+    <style>
+       .styled-link{
+        text-decoration: none;
+        color: black;
+       }
+    </style>
 
 </head>
 
