--- a/databank/import_export/templates/import_export/upload_trade_record.html
+++ b/databank/import_export/templates/import_export/upload_trade_record.html
@@ -8,75 +8,71 @@
 </form> -->
 
 
-
-
-<form method="POST">
+<form class="row" method="POST">
     {% csrf_token %}
-    <div class="row">
-      <div class="col-md-6">
-        <div class="mb-3">
-          {{ form.Trade_Type.label_tag }}
-          {{ form.Trade_Type }}
+ 
+        <div class="col-md-6">
+          <label for="" class="form-label">{{ form.Trade_Type.label_tag }}</label> 
+          {{form.Trade_Type}}
+         <!-- {{ form.Trade_Type }} -->
         </div>
-        <div class="mb-3">
-          {{ form.Calender.label_tag }}
+        <div class="col-md-6">
+          <label for="" class="form-label">{{ form.Calender.label_tag }}</label>
           {{ form.Calender }}
         </div>
-        <div class="mb-3">
-          {{ form.Fiscal_Year.label_tag }}
+        <div class="col-md-6">
+          <label for="" class="form-label">{{ form.Fiscal_Year.label_tag }}</label>
           {{ form.Fiscal_Year }}
         </div>
-        <div class="mb-3">
-            {{ form.Duration.label_tag }}
+        <div class="col-md-6">
+            <label for="" class="form-label">{{ form.Duration.label_tag }}</label>
             {{ form.Duration }}
           </div>
-      </div>
-      <div class="col-md-6">
-        <div class="mb-3">
-          {{ form.Country_Name.label_tag }}
+      
+        <div class="col-md-6">
+          <label for="" class="form-label">{{ form.Country_Name.label_tag }}</label>
           {{ form.Country_Name }}
         </div>
-        <div class="mb-3">
-          {{ form.HS_Code.label_tag }}
+        <div class="col-md-6">
+          <label for="" class="form-label">{{ form.HS_Code.label_tag }}</label>
           {{ form.HS_Code }}
         </div>
-        <div class="mb-3">
-          {{ form.Unit.label_tag }}
+        <div class="col-md-6">
+          <label for="" class="form-label">{{ form.Unit.label_tag }}</label>
           {{ form.Unit }}
         </div>
-        <div class="mb-3">
-            {{ form.Quantity.label_tag }}
+        <div class="col-md-6">
+            <label for="" class="form-label">{{ form.Quantity.label_tag }}</label>
             {{ form.Quantity }}
           </div>
-          <div class="mb-3">
-            {{ form.Currency_Type.label_tag }}
+          <div class="col-md-6">
+            <label for="" class="form-label">{{ form.Currency_Type.label_tag }}</label>
             {{ form.Currency_Type }}
           </div>
-          <div class="mb-3">
-            {{ form.Amount.label_tag }}
+          <div class="col-md-6">
+            <label for="" class="form-label">{{ form.Amount.label_tag }}</label>
             {{ form.Amount }}
           </div>
-          <div class="mb-3">
-            {{ form.Tarrif.label_tag }}
+          <div class="col-md-6">
+            <label for="" class="form-label">{{ form.Tarrif.label_tag }}</label>
             {{ form.Tarrif }}
           </div>
-          <div class="mb-3">
-            {{ form.Origin_Destination.label_tag }}
+          <div class="col-md-6">
+            <label for="" class="form-label">{{ form.Origin_Destination.label_tag }}</label>
             {{ form.Origin_Destination }}
           </div>
-          <div class="mb-3">
-            {{ form.TradersName_ExporterImporter.label_tag }}
+          <div class="col-md-6">
+            <label for="" class="form-label">{{ form.TradersName_ExporterImporter.label_tag }}</label>
             {{ form.TradersName_ExporterImporter }}
           </div>
-          <div class="mb-3">
-            {{ form.Documents.label_tag }}
+          <div class="col-md-6">
+            <label for="" class="form-label">{{ form.Documents.label_tag }}</label>
             {{ form.Documents }}
           </div>
-        
-      </div>
-    </div>
-    <div class="mb-3">
-      {{ form.Product_Information.label_tag }}
+      
+    
+    <div class="col-md-6">
+      <label for="" class="form-label">{{ form.Product_Information.label_tag }}</label>
       {{ form.Product_Information }}
     </div>
     
