--- a/databank/templates/main.html
+++ b/databank/templates/main.html
@@ -18,11 +18,10 @@
 
 </head>
 
-<body>
-
+<body class="bg-body-secondary  ">
     {% include 'navbar.html' %}
 
-    <div class="container  pt-3  ">
+    <div class="container  fw-light  pt-3  ">
         {% block content %}
         {% endblock  %}
     </div>
