--- a/databank/import_export/templates/import_export/display_table.html
+++ b/databank/import_export/templates/import_export/display_table.html
@@ -2,154 +2,209 @@
 
 {% block content %}
 
-<div class="more-info-btns">
-    <p class="d-inline-flex gap-1">
-        <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFilter"
-            aria-expanded="false" aria-controls="collapseFilter">
-            Show Filters
-        </button>
-        <a href="{% url 'upload_trade_excel' %}">
-        <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseUpload"
-            aria-expanded="false" aria-controls="collapseUpload">
-           Upload Excel
-        </button></a>
 
-        <a class="styled-link" href="{% url 'upload_trade_record' %}">
-            <button class="btn btn-outline-dark">Add Trade Data</button>
-        </a>
-    </p>
-</div>
 
-<div class="collapse" id="collapseFilter">
-    <form class="row g-3" method="GET" action=".">
 
-        <div class="form-group col-12">
-            <div class="input-group">
-                <input class="form-control py-2 border-right-0 border" type="search"
-                    name="currency_product_originDestination"
-                    placeholder="Search by Currency Type, Product Information or Origin/Destination" />
+<!-- Filter Buttons -->
+<!-- <div class="filter-btns bg-light p-3">
+        <p class="d-inline-flex gap-1">
+            <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFilter"
+                aria-expanded="false" aria-controls="collapseFilter">
+                Show Filters
+            </button>
+            <a href="{% url 'upload_trade_excel' %}">
+            <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseUpload"
+                aria-expanded="false" aria-controls="collapseUpload">
+               Upload Excel
+            </button></a>
+    
+            <a class="styled-link" href="{% url 'upload_trade_record' %}">
+                <button class="btn btn-outline-dark">Add Trade Data</button>
+            </a>
+        </p>
+    </div> -->
 
+
+<button class="btn btn-primary btn-sm px-4" data-bs-toggle="collapse" data-bs-target="#collapseFilter"
+    aria-expanded="false" aria-controls="collapseFilter">Filters</button>
+
+<div class="bg-light mt-2">
+    <div class="collapse  shadow rounded-2 p-3" id="collapseFilter">
+        <!-- <form class="row g-3" method="GET" action=".">
+    
+            <div class="form-group col-12">
+                <div class="input-group">
+                    <input class="form-control py-2 border-right-0 border" type="search"
+                        name="currency_product_originDestination"
+                        placeholder="Search by Currency Type, Product Information or Origin/Destination" />
+    
+                </div>
             </div>
-        </div>
+    
+            <div class="col-md-3">
+                <label for="date_minimum">Publish date minimum</label>
+                <input type="date" class="form-control" id="date_minimum" name="date_min">
+            </div>
+            <div class="col-md-3">
+                <label for="date_maximum">Publish date maximum</label>
+                <input type="date" class="form-control" id="date_maximum" name="date_max">
+            </div>
+    
+            <div class="col-md-3 ">
+                <label for="viewCountMin">Minimum Quantity</label>
+                <input type="number" min=0 class="form-control" id="viewCountMin" placeholder="0" name="quantity_min">
+            </div>
+            <div class="col-md-3 ">
+                <label for="viewCountMax">Maximum Quantity</label>
+                <input type="number" min=0 class="form-control" id="viewCountMax" placeholder="1000" name="quantity_max">
+            </div>
+    
+    
+    
+    
+            <div class="form-group col-md-3">
+                <label for="trade_type">Trade Type</label>
+                <select id="trade_type" class="form-control" name="trade_type">
+                    <option selected>--</option>
+                    {% for trade_type in trade_type_categories %}
+                    <option value="{{trade_type}}">{{trade_type}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+    
+            <div class="form-group col-md-3">
+                <label for="country_category">Country</label>
+                <select id="country_category" class="form-control" name="country_category">
+                    <option selected>--</option>
+                    {% for country_category in country_categories %}
+                    <option value="{{country_category.id }}">{{country_category}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+    
+            <div class="form-group col-md-3">
+                <label for="unit_category">Unit</label>
+                <select id="unit_category" class="form-control" name="unit_category">
+                    <option selected>--</option>
+                    {% for unit_category in unit_categories %}
+                    <option value="{{unit_category.id }}">{{unit_category}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+    
+            <div class="form-group col-md-3">
+                <label for="hs_code">HS Code</label>
+                <select id="hs_code" class="form-control" name="hs_code">
+                    <option selected>--</option>
+                    {% for hs_code in hs_codes %}
+                    <option value="{{hs_code.id }}">{{hs_code}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+    
+            <button type="submit" class="col-md-1 btn btn-primary">Search</button>
+        </form> -->
+        <form action="." class="row px-3  fw-normal" method="GET">
 
-        <div class="col-md-3">
-            <label for="date_minimum">Publish date minimum</label>
-            <input type="date" class="form-control" id="date_minimum" name="date_min">
-        </div>
-        <div class="col-md-3">
-            <label for="date_maximum">Publish date maximum</label>
-            <input type="date" class="form-control" id="date_maximum" name="date_max">
-        </div>
+            <div class="row col-6">
+                <label class="col-form-label text-end  col-sm-3" for="hs_code">HS Code</label>
+                <div class="col-md-9">
+                    <select id="hs_code" class="form-select form-select-sm" name="hs_code">
+                        <option selected>--</option>
+                        {% for hs_code in hs_codes %}
+                        <option value="{{hs_code.id }}">{{hs_code}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
 
-        <div class="col-md-3 ">
-            <label for="viewCountMin">Minimum Quantity</label>
-            <input type="number" min=0 class="form-control" id="viewCountMin" placeholder="0" name="quantity_min">
-        </div>
-        <div class="col-md-3 ">
-            <label for="viewCountMax">Maximum Quantity</label>
-            <input type="number" min=0 class="form-control" id="viewCountMax" placeholder="10000?" name="quantity_max">
-        </div>
+            <div class="row col-6">
+                <label class="col-form-label text-end  col-sm-3" for="country_category">Country</label>
+                <div class="col-md-9">
+                    <select id="country_category" class="form-select form-select-sm" name="country_category">
+                        <option selected>--</option>
+                        {% for country_category in country_categories %}
+                        <option value="{{country_category.id }}">{{country_category}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
 
+            <div class="row col-6">
+                <label class="col-form-label text-end col-sm-3" for="trade_type">Trade Type</label>
+                <div class="col-md-9"><select id="trade_type" class="form-select form-select-sm" name="trade_type">
+                        <option selected>--</option>
+                        {% for trade_type in trade_type_categories %}
+                        <option value="{{trade_type}}">{{trade_type}}</option>
+                        {% endfor %}
+                    </select></div>
+            </div>
+            <button type="submit" class="btn btn-primary col-1 btn-sm ">Search</button>
+        </form>
 
-
-
-        <div class="form-group col-md-3">
-            <label for="trade_type">Trade Type</label>
-            <select id="trade_type" class="form-control" name="trade_type">
-                <option selected>--</option>
-                {% for trade_type in trade_type_categories %}
-                <option value="{{trade_type}}">{{trade_type}}</option>
-                {% endfor %}
-            </select>
-        </div>
-
-        <div class="form-group col-md-3">
-            <label for="country_category">Country</label>
-            <select id="country_category" class="form-control" name="country_category">
-                <option selected>--</option>
-                {% for country_category in country_categories %}
-                <option value="{{country_category.id }}">{{country_category}}</option>
-                {% endfor %}
-            </select>
-        </div>
-
-        <div class="form-group col-md-3">
-            <label for="unit_category">Unit</label>
-            <select id="unit_category" class="form-control" name="unit_category">
-                <option selected>--</option>
-                {% for unit_category in unit_categories %}
-                <option value="{{unit_category.id }}">{{unit_category}}</option>
-                {% endfor %}
-            </select>
-        </div>
-
-        <div class="form-group col-md-3">
-            <label for="hs_code">HS Code</label>
-            <select id="hs_code" class="form-control" name="hs_code">
-                <option selected>--</option>
-                {% for hs_code in hs_codes %}
-                <option value="{{hs_code.id }}">{{hs_code}}</option>
-                {% endfor %}
-            </select>
-        </div>
-
-        <button type="submit" class=" col-1 btn btn-primary">Search</button>
-    </form>
+    </div>
 </div>
 
 
+<!-- table info -->
 
-<hr>
-<div class="table-responsive">
-    <table class="table table-striped table-bordered  table-hover">
-        <!--  -->
+<div class="table-responsive mt-4 bg-light p-3">
+    <table class="table table-striped table-bordered table-sm table-hover">
         <thead>
             <tr>
-                <th scope="col">Trade_Types</th>
-                <th scope="col">Calender</th>
-                <th scope="col">Fiscal_Year</th>
-                <th scope="col">Duration</th>
-                <th scope="col">Country_Name</th>
-                <th scope="col">HS_Code</th>
-                <th scope="col">Unit</th>
-                <th scope="col">Quantity</th>
-                <th scope="col">Currency_Type</th>
-                <th scope="col">Amount</th>
-                <th scope="col">Tarrif</th>
-                <th scope="col">Origin_Destination</th>
-                <th scope="col">TradersName_ExporterImporter</th>
-                <th scope="col">Documents</th>
-                <th scope="col">Product_Information</th>
-                <th scope="col"></th>
+                <th class="bg-primary text-white fs-6 p-2" scope="col">Trade_Types</th>
+                <th class="bg-primary text-white fs-6 p-2" scope="col">Calender</th>
+                <th class="bg-primary text-white fs-6 p-2" scope="col">Fiscal_Year</th>
+                <th class="bg-primary text-white fs-6 p-2" scope="col">Duration</th>
+                <th class="bg-primary text-white fs-6 p-2" scope="col">Country_Name</th>
+                <th class="bg-primary text-white fs-6 p-2" scope="col">HS_Code</th>
+                <th class="bg-primary text-white fs-6 p-2" scope="col">Unit</th>
+                <th class="bg-primary text-white fs-6 p-2" scope="col">Quantity</th>
+                <th class="bg-primary text-white fs-6 p-2" scope="col">Currency_Type</th>
+                <th class="bg-primary text-white fs-6 p-2" scope="col">Amount</th>
+                <th class="bg-primary text-white fs-6 p-2" scope="col">Tarrif</th>
+                <th class="bg-primary text-white fs-6 p-2" scope="col">Origin_Destination</th>
+                <th class="bg-primary text-white fs-6 p-2" scope="col">TradersName_ExporterImporter</th>
+                <th class="bg-primary text-white fs-6 p-2" scope="col">Documents</th>
+                <th class="bg-primary text-white fs-6 p-2" scope="col">Product_Information</th>
+                <th class="bg-primary text-white fs-6 p-2" scope="col">Action</th>
             </tr>
         </thead>
         <tbody class="table-hover">
-            {% for record in page %}</a>
+            {% for record in page %}
             <tr>
-               
-                <td> <a class="styled-link"  href="{% url 'update_trade_record' record.id%}">{{ record.Trade_Type }}</a></td>
-                <td> <a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Calender }}</a> </td>
-                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Fiscal_Year }}</a></td>
-                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Duration }}</a></td>
-                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Country_Name }}</a></td>
-                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.HS_Code }}</a></td>
-                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Unit }}</a></td>
-                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Quantity }}</a></td>
-                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Currency_Type }}</a></td>
-                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Amount }}</a></td>
-                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Tarrif }}</a></td>
-                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Origin_Destination }}</a></td>
-                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.TradersName_ExporterImporter }}</a></td>
-                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Documents }}</a></td>
-                <td><a class="styled-link" href="{% url 'update_trade_record' record.id%}">{{ record.Product_Information }}</a></td>
-                <td class="d-flex"> 
-                    <div class="btn btn-outline-danger "> 
-                        <a class="styled-link" href="{% url 'delete_trade_record' record.id %}">Delete</a> 
-                    </div> 
-                    
-                    
+
+                <td> {{ record.Trade_Type }}
+                </td>
+                <td> {{ record.Calender }}
+                </td>
+                <td>{{ record.Fiscal_Year }}
+                </td>
+                <td>{{ record.Duration }}
+                </td>
+                <td>{{ record.Country_Name }}
+                </td>
+                <td>{{ record.HS_Code }}</td>
+                <td>{{ record.Unit }}</td>
+                <td>{{ record.Quantity }}
+                </td>
+                <td>{{ record.Currency_Type }}</td>
+                <td>{{ record.Amount }}</td>
+                <td>{{ record.Tarrif }}</td>
+                <td>{{ record.Origin_Destination }}</td>
+                <td>{{ record.TradersName_ExporterImporter }}
+                </td>
+                <td>{{ record.Documents }}
+                </td>
+                <td>{{ record.Product_Information }}</td>
+                <td class="d-flex">
+                    <div class="btn btn-outline-danger ">
+                        <a class="styled-link" href="{% url 'delete_trade_record' record.id %}">Delete</a>
+                    </div>
+
+
                     <div class="btn btn-outline-primary">
-                        <a class="styled-link" href="{% url 'update_trade_record' record.id %}">Edit</a> 
+                        <a class="styled-link" href="{% url 'update_trade_record' record.id %}">Edit</a>
 
                     </div>
                 </td>
@@ -160,12 +215,7 @@
     </table>
 </div>
 
-
-
-
-
-
-
+<!-- pagination -->
 <div class="pagination m-3 d-flex justify-content-center">
     <span class="step-links bg-light rounded-1 d-flex justify-content-center gap-3 p-3">
         {% if page.has_previous %}
@@ -198,6 +248,3 @@
 
 
 {% endblock  %}
-
-
-
