--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top bg-body-tertiary" data-bs-theme="dark">
+<nav class="navbar sticky-top bg-primary" data-bs-theme="dark">
     <div class="container-fluid d-flex justify-content-center">
       <a class="navbar-brand" href="{% url 'display_table' %}">DataBank</a>
     </div>
