Time Series general

--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -1,6 +1,6 @@
   <nav class="navbar bg-body-tertiary sticky-top bg-primary" >
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'display_table' %}">DataBank</a>
+      <a class="navbar-brand" href="{% url 'display_trade_table' %}">DataBank</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
