--- a/databank/import/templates/import/time_series.html
+++ b/databank/import/templates/import/time_series.html
@@ -1,6 +1,9 @@
 {% extends 'main.html' %}
 {% block content %}
 
+
+{{result_country}}
+
 <button class="btn btn-primary btn-sm px-4" data-bs-toggle="collapse" data-bs-target="#collapseFilter"
     aria-expanded="false" aria-controls="collapseFilter">Filters</button>
 
