--- a/databank/import/templates/import/time_series.html
+++ b/databank/import/templates/import/time_series.html
@@ -1,7 +1,6 @@
 {% extends 'main.html' %}
 {% block content %}
 
-
 <button class="btn btn-primary btn-sm px-4" data-bs-toggle="collapse" data-bs-target="#collapseFilter"
     aria-expanded="false" aria-controls="collapseFilter">Filters</button>
 
@@ -53,6 +52,9 @@
 <div class="fs-6 mb-4 fw-bold text-center">Country: {{display_country}} </div>
 
 
+{% if queryset_length == 0 %}
+<div class="display-flex bg-light text-center fs-5 fw-normal text-danger p-5">No Records Found</div>
+{% else %}
 <div class="table-responsive mt- bg-light p-3">
     <table class="table table-striped table-bordered table-sm">
         <thead class="">
@@ -92,6 +94,9 @@
         </tbody>
     </table>
 </div>
+{% endif%}
+
+
 
 
 
