Fix : Styling Feature : Add main page filter

--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -28,11 +28,11 @@
                 <li><a class="dropdown-item" href="{% url 'upload_trade_excel' %}">Upload Trade Data File</a></li>
               </ul>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'upload_trade_record' %}">Add Trade Data</a>
+            </li>
           </ul>
-          <form class="d-flex mt-3" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+         
         </div>
       </div>
     </div>
