Fix : Style changes

--- a/databank/import/templates/import/time_series.html
+++ b/databank/import/templates/import/time_series.html
@@ -65,7 +65,7 @@
                     <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">Importers</th>
                     {% endif %}
                 {% for year in years %}
-                <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">Amount in Year {{year}} </th>
+                <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">Exported value in {{year}} </th>
                 {% endfor %}
             </tr>
         </thead>
@@ -78,7 +78,7 @@
                 {% endfor %}
             </tr>
                 {% for hs_code, year_data in result_hs_code.items %}
-                    <tr class="text-end">
+                    <tr >
                         <td>{{ hs_code }}</td>
                         {% for year, total_amount in year_data.items %}
                         <td>{{ total_amount }}</td>
